<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardwhite"
    android:gravity="center"
    android:orientation="vertical"
    app:backgroundTint="#3F51B5"
    tools:context=".ReminderActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            app:backgroundTint="@null">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/add_reminder_here"
                android:textSize="30sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/editTitle"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:background="@drawable/edit_background"
                android:hint="@string/enter_the_task"
                tools:ignore="TextFields" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btnDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="0.5"
                    android:background="#3F51B5"
                    android:text="@string/date"
                    android:textColorHighlight="#3F51B5"
                    android:textColorLink="#090909"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btnTime"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="0.5"
                    android:background="#3F51B5"
                    android:text="@string/time" android:textColorHighlight="#3F51B5"
                    android:textColorLink="#090909"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>


            <Button
                android:id="@+id/btnSbumit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/save" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>